fixed overlaping text

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 
 /* Section layout */
 .section {
-    padding: 100px 10% 0;
+    padding: 20px;
     margin-bottom: 0px;
     text-align: center;
 }
